service-mesh-test-app/test-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apache
spec:
  hosts:
  - "*"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /db
    route:
    - destination:
        host: frontend
        port:
          number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: db-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 3360
      name: db
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: db
spec:
  hosts:
  - "*"
  gateways:
  - db-gateway
  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: backend
        port:
          number: 3306
